docs/versions/4.22/groups/M13.md
---
layout: group
group_id: M13
version: "4.22"
---

> **No remediation needed on RHCOS 9.8+ (OCP 4.22+).** These checks PASS on vanilla RHCOS 9.8 due to hardened OS defaults shipped in that version. Older RHCOS versions (9.6 and earlier) still require remediation. Verified with compliance-operator v1.8.2 and pinned content [quay.io/bapalm/k8scontent:v0.1.80](https://quay.io/repository/bapalm/k8scontent).

## Overview

Extends the basic DAC (Discretionary Access Control) audit rules from M3 to cover additional syscalls for file permission and ownership changes. While M3 covers `chmod` and `chown`, this group adds variants like `fchmod`, `fchown`, `setxattr`, and their 'l' (symlink-aware) counterparts.

**Profile**: NIST 800-53 Moderate (`rhcos4-moderate`)

## Compliance Checks

| Check | Description |
|-------|-------------|
| `fchmod` | Audit file permission changes via fchmod |
| `fchmodat` | Audit file permission changes via fchmodat |
| `fchown` | Audit file ownership changes via fchown |
| `fchownat` | Audit file ownership changes via fchownat |
| `fremovexattr` | Audit extended attribute removal via fremovexattr |
| `fsetxattr` | Audit extended attribute setting via fsetxattr |
| `lchown` | Audit symlink ownership changes via lchown |
| `lremovexattr` | Audit symlink extended attribute removal |
| `lsetxattr` | Audit symlink extended attribute setting |
| `removexattr` | Audit extended attribute removal via removexattr |
| `setxattr` | Audit extended attribute setting via setxattr |

## Verification

```bash
oc debug node/<node> -- chroot /host auditctl -l | grep -E 'fchmod|fchown|xattr'
```
